...

    <!-- menu_departures -->
    <string name="action_refresh_data">Refresh screen</string>
    <string name="action_sort_by_time">Sort by time</string>
    <string name="action_sort_by_direction">Sort by direction</string>

    <string name="searching_in_progress">Searching</string>
    <string name="empty_search_results">Nothing found - change search text and try again.</string>
    <string name="invalid_search_text">Search text can only contain letters, numbers, spaces, commas and decimal period.</string>

    <string name="express_train">Express to <xliff:g id="platform_number">%1$s</xliff:g></string>
    <string name="all_stops_train">All stops to <xliff:g id="platform_number">%1$s</xliff:g></string>

    <!-- Fixed Location from Setter start -->
    <!-- Key name for storing fixed location in SharedPreferences [CHAR LIMIT=NONE] -->
...
    <string name="content_desc_start_search">Start lines/stops search</string>
    <string name="content_desc_show_map">Show stop on map</string>
    <string name="content_desc_remove_from_favorites">Remove stop from favorites</string>
    <string name="content_show_stop_facility">Show stop facility</string>
    <string name="content_show_disruptions">Show disruptions</string>
    <string name="content_desc_next_departures">Next databaseDepartures</string>
    <string name="enter_search_text">Enter search text.</string>
    <string name="search_cancelled_enter_search_text">Search cancelled - enter search text.</string>
    <string name="search_instructions">
        Type line, route or stop name and wait\n one second
        or press search button.
    </string>
    <string name="search_instructions_notes">
        If the input search text is less than three (3) characters and a number, the Search API will only return matching “line” objects.\n\n
...

        \t\t “route 900” returns the Route 900 line
    </string>

    <string name="text_show_less">Show less</string>
    <string name="text_show_more">Show more</string>
    <string name="ptv_is_not_available">PTV is not available - try again later</string>
</resources>

