...
                app:source='@{"stopsSearchTextLayout"}'

                app:endIconMode="clear_text"
                app:endIconTint="@color/deep_orange_500"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/stopsSearchValidationMsg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stopsSearchText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"

                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
...

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/searchInstructionsView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:visibleUnless='@{(stopsSearcherViewModel.showView != ShowView.Instructions)|| stopsSearcherViewModel.stopSearcherScreenMsg != ""}'>

<!--
...
